Hosts with multiple fixed addresses have them all listed on the module's main page.
---- Changes since 1.300 ----
Added checboxes and buttons for deleting multiple subnets, shared networks, hosts and groups at once.
Fixed a bug that caused the display of large numbers of hosts and subnets to be slow.
Changed the Module Config PID file setting to allow None to be selected, which tells the module to look at the dhcpd process instead (as on OpenBSD).
---- Changes since 1.320 ----
Added a field on the Client Options page for the DHCP server identifier.
---- Changes since 1.370 ----
Fixed a bug that causes hosts to be deleted when searching for them!
---- Changes since 1.410 ----
Clashes between hosts with the same IP address, MAC address or hostname are no longer allowed by default - but this can be changed on the DHCP Server access control page in the Webmin User's module.
---- Changes since 1.420 ----
Support the new configuration file format for custom options, as used in DHCPd version 3.
---- Changes since 1.430 ----
Fixed bug that can cause option definitions and values to be incorrectly ordered.
Custom option types defined at a higher level (such as in a subnet) can be used in the Edit Options page at lower levels (such as in a host).
---- Changes since 1.440 ----
When a subnet or host is renamed, the user's ACL is updated to match.
---- Changes since 1.470 ----
Added a Module Config option to specify an alternate file to add new top-level objects (like subnets) to. This must be referenced by an include directive in the main dhcpd.conf though.
String custom options are now always quoted.
---- Changes since 1.480 ----
Converted buttons on the module's main page to use the Webmin UI library.
Expired leases are no longer counted towards usage on the DHCP Leases page.
Added a mode to the DHCP Leases page to show usage by subnet, thanks to a suggestion by Coles.