@@ -14,7 +14,7 @@ foreach $i ($in{'sidx'}, $in{'uidx'}, $in{'idx'}) {
 
 # check acls
 %access = &get_module_acl();
-&error_setup("<blink><font color=red>$text{'eacl_aviol'}</font></blink>");
+&error_setup($text{'eacl_aviol'});
 
 @host = &find("host", $par->{'members'});
 @group = &find("group", $par->{'members'});
