@@ -6,7 +6,7 @@ require './dhcpd-lib.pl';
 &ReadParse();
 
 %access = &get_module_acl();
-&error_setup("<blink><font color=red>$text{'eacl_aviol'}</font></blink>");
+&error_setup($text{'eacl_aviol'});
 if( !($access{'w_leases'} && $access{'r_leases'}) ) {
 	&error("$text{'eacl_np'} $text{'eacl_pdl'}");
 	}       
