@@ -12,7 +12,7 @@ $mems = $par->{'members'};
 
 # check acls
 %access = &get_module_acl();
-&error_setup("<blink><font color=red>$text{'eacl_aviol'}</font></blink>");
+&error_setup($text{'eacl_aviol'});
 if ($in{'new'}) {
 	&error("$text{'eacl_np'} $text{'eacl_pig'}")
 		unless &can('c', \%access, $group) && &can('rw', \%access, $par);
