@@ -14,7 +14,7 @@ else { $sub = $conf->[$in{'uidx'}]; }
 
 # check acls
 %access = &get_module_acl();
-&error_setup("<blink><font color=red>$text{'eacl_aviol'}</font></blink>");
+&error_setup($text{'eacl_aviol'});
 &error("$text{'eacl_np'} $text{'eacl_pss'}") if !&can('r',\%access,$sub);
 
 # display
