@@ -11,7 +11,7 @@ $sconf = $sha->{'members'};
 
 # check acls
 %access = &get_module_acl();
-&error_setup("<blink><font color=red>$text{'eacl_aviol'}</font></blink>");
+&error_setup($text{'eacl_aviol'});
 if ($in{'new'}  ) {
 	&error("$text{'eacl_np'} $text{'eacl_pin'}")
 		unless &can('c', \%access, $sha) && &can('rw', \%access, $par);
