@@ -18,7 +18,7 @@ foreach $i ($in{'sidx'}, $in{'uidx'}, $in{'gidx'}, $in{'idx'}) {
 
 # check acls
 %access = &get_module_acl();
-&error_setup("<blink><font color=red>$text{'eacl_aviol'}</font></blink>");
+&error_setup($text{'eacl_aviol'});
 if ($client->{'name'} eq 'subnet') {
 	&error("$text{'eacl_np'} $text{'eacl_pus'}")
 		if !&can('rw', \%access, $client);
