@@ -3,10 +3,10 @@
 
 require './dhcpd-lib.pl';
 %access = &get_module_acl();
-&error_setup("<blink><font color=red>$text{'eacl_aviol'}</font></blink>");
+&error_setup($text{'eacl_aviol'});
 &error("$text{'eacl_np'} $text{'eacl_papply'}") unless $access{'apply'};
 
-$whatfailed = $text{'stop_err'};
+&error_setup($text{'stop_err'});
 $err = &stop_dhcpd();
 &error($err) if ($err);
 &webmin_log("stop");
